--- a/templates/tougdo/index.html
+++ b/templates/tougdo/index.html
@@ -1,25 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!--index.html-->
+
 {% if object_list %}
-<h3>All my lists</h3>
+<h3>All Items</h3>
 {% endif %}
 <ul>
-    {% for todolist in object_list %}
+    {% for item in object_list %}
     <li>
         <div role="button"
-            onclick="location.href='{% url "list" todolist.id %}'">
-            {{ todolist.title }}
+            onclick="location.href='{% url "item-update" item.id %}'">
+            {{ item.title }}
         </div>
     </li>
     {% empty %}
-    <h4>You have no lists!</h4>
+    <h4>You have no items</h4>
     {% endfor %}
 </ul>
 <p>
-    <input value="Add a new list" type="button"
-        onclick="location.href='{% url "list-add" %}'"/>
+    <input value="Add a new item" type="button"
+        onclick="location.href='{% url "item-add" %}'"/>
 </p>
 
 {% endblock %}
