--- a/templates/tougdo/tag_confirm_delete.html
+++ b/templates/tougdo/tag_confirm_delete.html
@@ -10,6 +10,6 @@
     {% csrf_token %}
     <input type="submit" value="Yes, delete.">
 </form>
-<input value="Cancel" type="button" onclick="location.href='{% url "index" %}';">
+<input value="Cancel" type="button" onclick="location.href='{% url "items" %}';">
 
 {% endblock %}
