--- a/templates/tougdo/tag_form.html
+++ b/templates/tougdo/tag_form.html
@@ -9,7 +9,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <input value="Save" type="submit">
-            <input value="Cancel" type="button" onclick="location.href='{% url "index" %}';">
+            <input value="Cancel" type="button" onclick="location.href='{% url "items" %}';">
         </form>
     </div>
  </div>
