Add namespace to urls and add ItemForm

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <body>
     <div>
-        <h1 onclick="location.href='{% url "items" %}'">Django To-do Lists</h1>
+        <h1 onclick="location.href='{% url "tougdo:items" %}'">Django To-do Lists</h1>
     </div>
     <div>
         {% block content %}
