--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,10 @@
     </div>
     <div>
         {% block content %}
-        This content will be replaced by different html code for each page.
+
         {% endblock %}
     </div>
+    {% block after_content %}{% endblock %}
 </body>
 
 </html>
