Make use of new touglates base.html

--- a/templates/tougdo/item_form.html
+++ b/templates/tougdo/item_form.html
@@ -1,4 +1,5 @@
-{% extends "./_base.html" %}
+{% extends "touglates/base.html" %}
+{% block body %}
 
 {% block content %}
 
@@ -39,3 +40,4 @@
     });
     </script>
     {% endblock %}
+{% endblock %}
