--- a/templates/tougdo/item_form.html
+++ b/templates/tougdo/item_form.html
@@ -53,7 +53,7 @@
       <td><button type="button" id="button_addtaggeditem">Add Tag</button></td>
       <td span="*"></td>
     </tr>
-
+  </table>
 
   <input type="submit" value="Submit">
   {% if object.pk %}
